--- a/SeniorProject_v01/app/templates/app/admin_troop.html
+++ b/SeniorProject_v01/app/templates/app/admin_troop.html
@@ -1,10 +1,10 @@
-﻿{% extends "app/wrapper.html" %}
+﻿{% extends "app/layout.html" %}
 
 {% load staticfiles %}
 {% load widget_tweaks %}
 {% load append_ast_if_req %}
 
-{% block wrapper %}
+{% block content %}
 
 
 
