--- a/SeniorProject_v01/app/templates/app/error.html
+++ b/SeniorProject_v01/app/templates/app/error.html
@@ -1,6 +1,8 @@
-﻿{% extends "app/wrapper.html" %}
+﻿{% extends "app/layout.html" %}
 
-{% block wrapper %}
+{% block content %}
+
+<div class="navbar-offset"></div>
 
 <div class="jumbotron">
     <h1 class="display-2 text-danger"><i class="fas fa-exclamation-triangle fa-sm text-danger"></i> {{ error_code }} Error</h1>
