--- a/SeniorProject_v01/app/static/app/content/bootstrap.4.css
+++ b/SeniorProject_v01/app/static/app/content/bootstrap.4.css
@@ -3441,7 +3441,7 @@ tbody.collapse.show {
 }
 
     .dropdown-item:hover, .dropdown-item:focus {
-        color: #16181b;
+        color: rgba(255,255,255,0.75);
         text-decoration: none;
         background-color: #f8f9fa;
     }
@@ -4582,7 +4582,7 @@ tbody.collapse.show {
     }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.9);
 }
 
     .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
