--- a/SeniorProject_v01/app/templates/app/upcoming.html
+++ b/SeniorProject_v01/app/templates/app/upcoming.html
@@ -1,10 +1,10 @@
-﻿{% extends "app/wrapper.html" %}
+﻿{% extends "app/layout.html" %}
 
 {% load staticfiles %}
 {% load truncatesmart %}
 {% load widget_tweaks %}
 
-{% block wrapper %}
+{% block content %}
 
 <!-- check user authentication and display proper page -->
 {% if request.user.is_authenticated %}
@@ -40,12 +40,11 @@
     {% if upcoming %}
     <table class="table table-striped table-hover">
         <thead class="thead-dark">
-            <th><h3>Title</h3></th>
-            <th><h3>Category</h3></th>
-            <th><h3>Description</h3></th>
-            <th><h3>Date</h3></th>
-            <th><h3>Time</h3></th>
-            <th><h3>Location</h3></th>
+            <th class="align-center">Title</th>
+            <th class="align-center">Category</th>
+            <th>Description</th>
+            <th class="align-center">Date</th>
+            <th class="align-center">Location</th>
         </thead>
 
     {% for event in upcoming %}
@@ -80,8 +79,6 @@
 				<td class="align-middle align-center"><i class="fas fa-calendar-alt" aria-hidden="true"></i> {{ event.date_start }} - {{ event.date_end }}</td>
             {% endif %}
                 
-            <td>{{ event.start_time }}</td>
-
             <td class="align-middle align-center">{{ event.district }}</td>
 
         </tr>
