--- a/SeniorProject_v01/app/static/app/content/site.css
+++ b/SeniorProject_v01/app/static/app/content/site.css
@@ -151,8 +151,14 @@ input[type="checkbox"].input-validation-error {
     width: 100%;
 }
 
-/* CALENDAR CSS */
+/* DateTime picker override */
 
+.bootstrap-datetimepicker-widget table td, .bootstrap-datetimepicker-widget table th {
+    text-align: center;
+    border-radius: 0;
+    background-color: white;
+}
+/* CALENDAR CSS */
 .oafcal {
     width: 100%
 }
