--- a/SeniorProject_v01/app/templates/app/create.html
+++ b/SeniorProject_v01/app/templates/app/create.html
@@ -7,6 +7,14 @@
 {% block head %}
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
     {{ form.media }}
+
+<style>
+.bootstrap-datetimepicker-widget table td, .bootstrap-datetimepicker-widget table th {
+    text-align: center;
+    border-radius: 0;
+    background-color: white;
+}
+</style>
 {% endblock %}
 
 {% block content %}
